# Estrutura-de-Dados

./: .gitignore  CMakeLists.txt  Dockerfile  Dockerfile.benchmark  Dockerfile.dev  Dockerfile.gui  Dockerfile.paulo  Dockerfile.predictor  Dockerfile.prod  Dockerfile.python  Dockerfile.run  README.md  docker-compose.yaml
docs/: C++ Classes.md  C++ Header Files.md  C++ Memory.md  C++ Templates.md  bugs.md
include/: data.h
include/essential/: AVL.h  HashTable.h  LinkedList.h  RBTree.h
include/extra/: CuckooHashTable.h  SegmentTree.h  SkipList.h
include/module-test/: test.h
include/network/: data_receiver.h
python/: categorical.py  enviroment.yml  gan.py  generate.py  gui.py  model20.keras  predict_model.py  prediction.py  requirements.txt  requirements_gui.txt  requirements_predictor.txt  synthetic.csv  train_test_model.py
src/: main.cpp
src/essential/: AVL.cpp  HashTable.cpp  LinkedList.cpp  RBTree.cpp
src/extra/: Cuckoo.cpp  CuckooHashList.cpp  CuckooHashTable.h  SegmentTree.cpp  SkipList.cpp
src/network/: data_receiver.cpp
test/: Hash.cpp  RBTree.cpp  avl.cpp  benchmark.cpp  list.cpp  segment.cpp
